# full_yolo

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: build.yml  docker.yml
prompts/: architect.prompt  graphic.prompt  patterns.json  plan.prompt  research.prompt  test.prompt  todo.prompt
src/: main.rs
