[package]
name = "full-yolo"
version = "0.1.0"
edition = "2024"
description = "Autonomous Claude Code agent driven by todo.md"

[[bin]]
name = "full-yolo"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2"
